--- a/emacs-init.org
+++ b/emacs-init.org
@@ -297,9 +297,6 @@
    	      (setq ido-vertical-define-keys 'C-n-C-p-up-down-left-right)))
    #+END_SRC
    
-   #+RESULTS:
-   : t
-
 *** ido ubiquitous
     /Does what =ido-everywhere= is supposed to do/
 
@@ -508,16 +505,6 @@
        :ensure t)
    #+END_SRC
 
-** Flash executed s-exp
-  Its always very convenient to have some visual feedback when you
-  execute a clojure s-exp, lets set it up with this:
-
-  #+BEGIN_SRC emacs-lisp :exports code :results silent
-    (use-package cider-eval-sexp-fu
-      :ensure t
-      :config (setq eval-sexp-fu-flash-duration 0.5))
-  #+END_SRC
-  
 ** Prettify lambdas
   Makes some things look prettier 
   #+BEGIN_SRC emacs-lisp :exports code :results silent
@@ -703,12 +690,16 @@
    #+END_SRC
 
 ** Company mode - autocomplete engine
-   Complete anything
+   Complete anything.
+
+   - There's some [[https://github.com/company-mode/company-mode/issues/218][bug with company-mode]] and eshell, where it simply replaces =*= with nothing.. Lets disable
+     it for eshell major mode
    #+BEGIN_SRC emacs-lisp :exports code :results silent
      (use-package company
        :ensure t
-       :config (global-company-mode))
-
+       :config (progn
+                 (setq 'company-global-modes '(not eshell-mode))
+                 (global-company-mode)))
    #+END_SRC
 
 ** Smart M-x, aka. smex
@@ -733,6 +724,7 @@
    #+BEGIN_SRC emacs-lisp :exports code :results silent
    (defalias 'yes-or-no-p 'y-or-n-p)
    #+END_SRC
+
 ** Delete highlighted text
    I often mark a region that I'd like to replace, this could be enabled via:
    #+BEGIN_SRC emacs-lisp :exports code :results silent
@@ -835,9 +827,9 @@
      (use-package browse-kill-ring
        :ensure t
        :config (progn
-                 (browse-kill-ring-default-keybindings)
-                 (setq browse-kill-ring-highlight-current-entry t)))
+                 (browse-kill-ring-default-keybindings)))
    #+END_SRC
+
 * Org-mode
   Lets set up org-mode!
   #+BEGIN_SRC emacs-lisp :exports code :results silent
@@ -1039,3 +1031,69 @@
    #+BEGIN_SRC emacs-lisp :exports code :results silent
      (use-package vimgolf :ensure t)
    #+END_SRC
+** Share emacs session
+*** Rudel
+    well, this was way too complicated and simply does not work!
+   #+BEGIN_SRC emacs-lisp :exports code :results silent
+     ;;(use-package rudel :ensure t)
+   #+END_SRC
+
+   So elpa the package manager has a super old version, lets try from the version in elpa the source code repository..
+   #+BEGIN_SRC emacs-lisp :exports code :results silent
+     ;;(add-to-list 'load-path "~/emacs-git/elpa/")
+     ;;(load-file "/Users/vaknins9/emacs-git/elpa/rudel-loaddefs.el")
+   #+END_SRC
+
+*** Togetherly
+    [[https://github.com/zk-phi/togetherly/blob/master/Readme.org][Togetherly]] Seems to work just fine, and its much simpler
+   #+BEGIN_SRC emacs-lisp :exports code :results silent
+     (use-package togetherly
+       :ensure t)
+   #+END_SRC
+   
+   - To use it, start a server, specify IP, port and name.
+   - From another emacs, start a client and specify to ip:port and a different name.
+
+** Eshell configuration
+   #+BEGIN_SRC emacs-lisp :exports code :results silent
+     (defun eshell-quit ()
+       (insert "exit")
+       (eshell-send-input)
+       (delete-window))
+
+     (defun eshell-here ()
+       "Opens up a new shell in the directory associated with the
+     current buffer's file. The eshell is renamed to match that
+     directory to make multiple eshell windows easier."
+       (interactive)
+       (if (eq (with-current-buffer (current-buffer) major-mode) 'eshell-mode)
+           (eshell-quit)
+           (let* ((parent (if (buffer-file-name)
+                              (file-name-directory (buffer-file-name))
+                            default-directory))
+                  (height (/ (window-total-height) 3))
+                  (name   (car (last (split-string parent "/" t)))))
+             (split-window-vertically (- height))
+             (other-window 1)
+             (eshell "new")
+             (rename-buffer (concat "*eshell: " name "*"))
+
+             (insert (concat "ls"))
+             (eshell-send-input))))
+
+     (global-set-key (kbd "C-|") 'eshell-here)
+   #+END_SRC
+** Flash executed s-exp
+    This should have been eariler in this file, but when it is, I get a weird =Symbol’s value as variable is void: hi=. 
+    Tried to look for it, but didnt find anything useful.. Sticking this here for the time being..
+   
+    Its always very convenient to have some visual feedback when you
+    execute an s-exp, lets set it up with this:
+
+    #+BEGIN_SRC emacs-lisp :exports code :results silent
+      (use-package cider-eval-sexp-fu
+        :ensure t
+        :config (setq eval-sexp-fu-flash-duration 0.5))
+    #+END_SRC
+    
+
