--- a/emacs-init.org
+++ b/emacs-init.org
@@ -46,8 +46,8 @@
  
   #+END_SRC
 
-  So, after not being fully satisfied with the above solution, I managed to find a [[http://emacs.stackexchange.com/a/2555/6847][much better
-  solution]]:
+  So, after not being fully satisfied with the above solution, I
+  managed to find a [[http://emacs.stackexchange.com/a/2555/6847][much better solution]]:
   #+BEGIN_SRC emacs-lisp :exports code :results silent
   (setq-default major-mode
               (lambda () (if buffer-file-name
@@ -56,6 +56,19 @@
                           (set-auto-mode)))))
   #+END_SRC
 
+* Performance
+  Sometimes, while my emacs is up for a few days working through tramp
+  and cider, I'd get insane lags for simple things such as moving the
+  cursor. Profiling it showed that the GC was taking up lots of time
+  (and also that =locate-dominating-file= was using over a gig of ram!!)
+
+  A small help is to make the GC kick in a little later, instead of
+  the default 800k, we could do at 500GiB, no? ;)
+
+   #+BEGIN_SRC emacs-lisp :exports code :results silent
+   (setq gc-cons-threshold 500000000)
+   #+END_SRC
+  
 * Network                                                           :Network:
   This section configures network for emacs. Proxy has to be set and unset, and [[https://www.emacswiki.org/emacs/TrampMode][=tramp=]] has to be
   configured. If your workflow involves using different machines, I highly recommend getting
@@ -335,7 +348,7 @@
    
    #+BEGIN_SRC emacs-lisp :exports code :results silent
      (use-package auto-highlight-symbol
-       :ensure t
+       :ensure f
        :config (progn
                  (setq ahs-case-fold-search nil
                        ahs-default-range 'ahs-range-whole-buffer ;; start with scanning the entire buffer
@@ -507,10 +520,12 @@
   The bestest language for the jvm, along with the bestest editor ever
   makes for the bestestest experience like EVER! :D
 ** Install Cider
+
    Lets set up [[https://github.com/clojure-emacs/cider][cider]] which is an awesome, fully-featured clojure ide in emacs.
    #+BEGIN_SRC emacs-lisp :exports code :results silent
      (use-package cider
-       :ensure t)
+       :ensure t
+       :config (setq nrepl-use-ssh-fallback-for-remote-hosts 't))
    #+END_SRC
 ** Prettify lambdas
   Makes some things look prettier 
@@ -554,6 +569,8 @@
    
    #+BEGIN_SRC emacs-lisp :exports code :results silent
      (use-package clj-refactor
+     :disabled
+       :defer t
        :ensure t
        :config (progn
                  (clj-refactor-mode 1)
@@ -661,6 +678,7 @@
         (use-package crux
           :ensure t
           :bind (("s-r" . crux-recentf-ido-find-file)
+                 ("C-c C-r" . crux-recentf-ido-find-file)
                  ("C-a" . crux-move-beginning-of-line)))
    #+END_SRC
 
@@ -690,7 +708,8 @@
    #+BEGIN_SRC emacs-lisp :exports code :results silent
      (use-package ace-window
        :ensure t
-       :bind (("s-w" . ace-window)))
+       :bind (("s-w" . ace-window)
+              ("C-c C-o" . ace-window)))
    #+END_SRC
 
 ** avy navigation
@@ -1017,6 +1036,14 @@
    Org-mode does not play very well with lets, smartparens try to manually bind the useful stuff.
    Need to find a way to only enable parenthesis insertion withough any special key-bindings..
   
+*** Configure gnuplot
+    #+BEGIN_SRC emacs-lisp :exports code :results silent
+      (use-package gnuplot :ensure t
+        :config (progn
+                  (require 'org-babel)
+                  (require 'org-babel-init)
+                  (require 'org-babel-gnuplot)))
+    #+END_SRC
 * Personal
 ** Fix tables for org-mode
    When I am using hadoop or spark, lots of their tables are delimited with tabs and are generally
@@ -1076,7 +1103,9 @@
     [[https://github.com/zk-phi/togetherly/blob/master/Readme.org][Togetherly]] Seems to work just fine, and its much simpler
    #+BEGIN_SRC emacs-lisp :exports code :results silent
      (use-package togetherly
-       :ensure t)
+       :ensure t
+       :disabled
+       )
    #+END_SRC
    
    - To use it, start a server, specify IP, port and name.
